# Automatons

./: CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  Helpers.cmake  Sanitize.cmake
src/: CMakeLists.txt  casting.hpp
src/regex/: CMakeLists.txt  alphabet.hpp  fdfa.hpp  nfa.hpp  regex.hpp  tokenizer.hpp  tranforms.hpp
src/regex/test/: test_alphabet.cpp  test_fdfa.cpp  test_nfa.cpp  test_regex.cpp  test_transforms.cpp
